<resources>
    <string name="app_name" translatable="false">Raibu</string>
    <string name="video">Video</string>
    <string name="image">Image</string>

    <string name="all_settings">Settings</string>
    <string name="settings_section_theme" translatable="false">Theme</string>
    <string name="settings_section_gif" translatable="false">GIF</string>
    <string name="settings_section_video" translatable="false">Video</string>
    <string name="settings_section_all" translatable="false">All</string>

    <string name="error_image_open">Image could not be opened</string>
    <string name="error_video_open">Video could not be opened</string>

    <string name="keyThemeDarkMode" translatable="false">keyThemeDarkMode</string>
    <string name="keyGifScaleType" translatable="false">keyGifScaleType</string>
    <string name="keyVideoAudio" translatable="false">keyVideoAudio</string>
    <string name="keyDoubleTapToPause" translatable="false">keyDoubleTapToPause</string>
    <string name="keyPlayOffscreen" translatable="false">kayPlayBackground</string>
    <string name="keyCropVideo" translatable="false">keyCropVideo</string>

    <string name="nameDarkMode">Dark Mode</string>
    <string name="nameScaleType">Scale Type</string>
    <string name="nameEnableAudio">Enable Audio</string>
    <string name="nameDoubleTapToPause" >Double Tap to Pause</string>
    <string name="namePlayOffscreen">Play Offscreen</string>
    <string name="summaryPlayOffscreen">Play when not visible or screen is off</string>
    <string name="nameCropVideo">Crop Video</string>
</resources>
